[package]
name = "sassry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[package.metadata.cargo-fmt]
before-build = true

[dependencies]
cassry = { path = "../cassry" }
cassry-derive = { path = "../cassry/derive" }

# below are dependencies should be imported each project
serde = { version = "1", features = ["derive", "rc"] }
serde_with = "3"
thiserror = "2"

# tags
async-trait = "0.1"
derive_more = { version = "2", features = ["full"] }

# tokio stream
tokio-tungstenite = { version = "0.28.0", features = [
    "__rustls-tls",
    "handshake",
    "rustls-tls-native-roots",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.8", features = ["codec"] }

# webserver
axum = { version = "0.8", features = ["form", "json", "tokio", "ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = ["typed-header"] }

# 타워 세션은 사실 main에만 있어도 됨, errors 에서 사용하지만 claims에서 사용하므로 여기에 있음
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = "0.8"
tower-sessions = "0.14"
tower-cookies = "0.11"
oauth2 = "5"

# others
# dashmap = "6.1.0"

base64 = "0.22"
bitflags = "2"
rand = { version = "0.9", features = ["std"] }
url = "2.5"

uuid = "1"

ta = "0.5.0"
meval = "0.2"

# tls-listener = { version = "0.9.1", features = [
#     "rustls",
# ] }


