[package]
name = "sassry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[package.metadata.cargo-fmt]
before-build = true

[dependencies]
cassry = { path = "../cassry" }
cassry-derive = { path = "../cassry/derive" }

# below are dependencies should be imported each project
serde = { version = "1", features = ["derive", "rc"] }
serde_with = { version = "3", features = ["chrono_0_4", "base64", "hex"] }
thiserror = "2"
async-trait = "0.1"
derive_more = { version = "2", features = ["full"] }
validator = { version = "0.20", features = ["derive"] }

# tokio stream - tokio-tungstenite를 쓰기 위해서는 rustls에서 ring이나 aws-lc-rs 피쳐를 활성해서 Provider를 설정해야 함
tokio-tungstenite = { version = "0.28.0", features = [
    "__rustls-tls",
    "handshake",
    "rustls-tls-native-roots",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.8", features = ["codec"] }

# webserver 
axum = { version = "0.8", features = ["form", "json", "tokio", "ws", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = ["typed-header"] }

# 타워 라이브러리 - Axum의 미들웨어 설정에 사용
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = "0.8"
tower-sessions = "0.14"
tower-cookies = "0.11"
oauth2 = "5"

mongodb = { version = "3", features = ["tracing-unstable", "bson-3"] }
bson = { version = "3", features = [
    "chrono-0_4",
    "uuid-1",
    "time-0_3",
    "serde_with-3",
    "serde_json-1",
] }

# others
# dashmap = "6.1.0"
bitflags = "2"
rand = { version = "0.9", features = ["std"] }
url = "2.5"
uuid = "1"

ta = "0.5.0"
meval = "0.2"
